# csp-osgal

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  Makefile.am  NEWS  README  autogen.sh  configure.in  howtobuild_vs2003.bat  howtobuild_vs2005.bat  howtobuild_vs2008.bat  osgal.pc.in  runme.bat
CMakeModules/: FindALUT.cmake  FindOGG.cmake  FindOpenAL.cmake  FindVorbis.cmake  FindVorbisFile.cmake  Findosg.cmake  FindosgDB.cmake  FindosgGA.cmake  FindosgUtil.cmake  FindosgViewer.cmake  ModuleInstall.cmake
VisualStudio/examples/openalpp/: capture.dsp  capture.vcproj  moving.dsp  moving.vcproj  multiple-vc7.vcproj  multiple.dsp  multiple.vcproj  multiple_oggstreams-vc7.vcproj  multiple_oggstreams.dsp  multiple_oggstreams.vcproj  playOgg.dsp  playOgg.vcproj  playstream.vcproj  simple.dsp  simple.vcproj  testfstream-vc7.vcproj  testfstream.dsp  testfstream.vcproj
VisualStudio/examples/osgal/: Example_osgaldemo-vc7.vcproj  Example_osgaldemo.dsp  Example_osgaldemo.vcproj
VisualStudio/examples/osgalmultiple/: Example_osgalmultiple.dsp  Example_osgalmultiple.vcproj
VisualStudio/examples/osgalocclude/: Example_osgalocclude-vc7.vcproj  Example_osgalocclude.dsp  Example_osgalocclude.vcproj
VisualStudio/examples/osgalviewer/: Example_osgalviewer-vc7.vcproj  Example_osgalviewer.dsp  Example_osgalviewer.vcproj
VisualStudio/openalpp/: openalpp-vc7.vcproj  openalpp.dsp  openalpp.sln  openalpp.vcproj
VisualStudio/osgAL/: osgAL-vc7.vcproj  osgAL.dsp  osgAL.dsw  osgAL.sln  osgAL.vcproj
VisualStudio/osgPlugin_osgAL/: osgPlugin_osgAL-vc7.vcproj  osgPlugin_osgAL.dsp  osgPlugin_osgAL.vcproj
config/: ccache.m4
data/: osgal_scene.osg  osgalocclude_scene.osg  runme.bat  test_ogg.bat
doc/: doxygen.cfg  index.html
examples/: CMakeLists.txt  Makefile.am
examples/openalpp/: CMakeLists.txt  Makefile.am  README  capture.cpp  moving.cpp  multiple.cpp  multiple_oggstreams.cpp  playOgg.cpp  playstream.cpp  simple.cpp  testfstream.cpp
examples/osgal/: CMakeLists.txt  Makefile.am  README  osgal.cpp
examples/osgalmultiple/: CMakeLists.txt  Makefile.am  osgalmultiple.cpp
examples/osgalocclude/: CMakeLists.txt  Makefile.am  osgalocclude.cpp
examples/osgalviewer/: CMakeLists.txt  Makefile.am  osgalviewer.cpp
include/: Makefile.am
include/openalpp/: AudioBase  AudioConvert  AudioEnvironment  Capture  DeviceUpdater  Error  Event  Export  FileStream  FileStreamUpdater  GroupSource  InputDevice  Listener  Makefile.am  NetStream  NetUpdater  PositionedObject  Sample  SoundData  Source  SourceBase  Stream  StreamUpdater  config  windowsstuff
include/osgAL/: Export  Makefile.am  Math  OccludeCallback  SoundManager  SoundNode  SoundRoot  SoundState  Version
src/: CMakeLists.txt  Makefile.am
src/openalpp/: AudioBase.cpp  AudioConvert.cpp  AudioEnvironment.cpp  CMakeLists.txt  Capture.cpp  DeviceUpdater.cpp  Error.cpp  Event.cpp  FileStream.cpp  FileStreamUpdater.cpp  GroupSource.cpp  InputDevice.cpp  Listener.cpp  Makefile.am  NetStream.cpp  NetUpdater.cpp  NoFileStream.cpp  NoInputDevice.cpp  NoStreaming.cpp  Openalpp.cpp  Sample.cpp  SoundData.cpp  Source.cpp  SourceBase.cpp  Stream.cpp  StreamUpdater.cpp
src/osgAL/: CMakeLists.txt  Makefile.am  OccludeCallback.cpp  SoundManager.cpp  SoundNode.cpp  SoundRoot.cpp  SoundState.cpp  Version.cpp
src/osgPlugin/: CMakeLists.txt  IO_OccludeCallback.cpp  IO_SoundNode.cpp  IO_SoundRoot.cpp  IO_SoundState.cpp  Makefile.am
