# INITIATE AUTOCONF
AC_INIT([src/Makefile.am])

#BEGIN DEFAULT SETTINGS


# General

CXXFLAGS="-Wall -W"


#END DEFAULT SETTINGS



# BEGIN GENERAL AUTOCONF STUFF

AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE(osgAL,0.5)

dnl C++ style
AC_LANG_CPLUSPLUS
#CXX=g++
AC_PROG_CXX
AC_PROG_CXXCPP
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AM_PROG_LIBTOOL

dnl Check system type
#AC_CANONICAL_HOST

dnl create only shared libtool-libraries
AC_ENABLE_SHARED(yes)

dnl set the following to yes, if you want to create static
dnl libtool-libraries
AC_ENABLE_STATIC(no)

# ***** DEBUGGING
AC_ARG_ENABLE(debug,[  --enable-debug          enable debugging [default=no]])
if test "$enable_debug" = "yes"; then
    CXXFLAGS="-g $CXXFLAGS"
else
    CXXFLAGS="-O2 $CXXFLAGS"
fi

# ***** PROFILING
AC_ARG_ENABLE(profiling,[  --enable-profiling  enable profiling [default=no]])
if test "$enable_profiling" = "yes"; then
    CXXFLAGS="-pg $CXXFLAGS"
fi
CFLAGS="$CPPFLAGS -I/usr/local/include"



# ***** Open Scenegraph
OSG_FOUND="no"
AC_CHECK_LIB(osg, osgGetVersion, OSG_FOUND="yes",
	[AC_MSG_ERROR(OpenSceneGraph library not found. See http://www.openscenegraph.org)], -ldl )
AC_ARG_WITH(osg, [  --with-osg              compile OSG support [default=detect]])
[case "$with_osg" in
	yes) ;;
	no) ;;
	*) with_osg="$OSG_FOUND" ;;
esac]
# BUILD OUTPUT VARIABLES
AM_CONDITIONAL(WITH_OSG, test x$with_osg = xyes )

if test "$with_osg" = "yes"; then
 OSGAL_LIBS="$OSGAL_LIBS -losgProducer -losgUtil -losgDB -losg "
fi


# ***** OpenAL++
# BUILD OUTPUT VARIABLES
OPENALPP_CFLAGS="`pkg-config --cflags openalpp`"
AC_SUBST(OPENALPP_CFLAGS)
OPENALPP_LIBS="`pkg-config --libs openalpp`"
AC_SUBST(OPENALPP_LIBS)

# Ogg Vorbis
AC_CHECK_LIB(ogg,main,WITH_OGGVORBIS="yes")
AM_CONDITIONAL(WITH_OGGVORBIS, test "$WITH_OGGVORBIS" = "yes")

# END GENERAL AUTOCONF STUFF

dnl Checks for libraries.
# OpelAL
AC_CHECK_LIB(openal,main)




OSGAL_LIBS="$OSGAL_LIBS $OPENALPP_LIBS"
AC_SUBST(OSGAL_LIBS)

echo "CPPFLAGS=$CPPFLAGS"
echo "LDFLAGS=$LDFLAGS"
echo "OSGAL_LIBS=$OSGAL_LIBS"
echo "GL_CFLAGS=$GL_CFLAGS"
echo "GL_LIBS=$GL_LIBS"

dnl Checks for header files.
AC_HEADER_STDC

dnl Checks for typedefs, structures, and compiler characteristics.
#AC_C_CONST

dnl Checks for library functions.

AC_OUTPUT(Makefile include/Makefile include/openalpp/Makefile src/Makefile tests/Makefile openalpp.pc)

AC_CONFIG_FILES([Makefile 
	include/Makefile 
	include/osgAL/Makefile 
	include/openalpp/Makefile 
	src/Makefile 
	src/osgAL/Makefile 
	src/openalpp/Makefile 
	src/osgPlugin/Makefile 
	examples/Makefile 
	osgal.pc
	examples/openalpp/Makefile 
	examples/osgal/Makefile 
	examples/osgalocclude/Makefile 
	examples/osgalmultiple/Makefile 
	examples/osgalviewer/Makefile 
])
AC_OUTPUT
