#
# Copyright (C) 2004-2006 Anders Backman, VRlab <andersb@cs.umu.se>
# Copyright (C) 2006 Loic Dachary <loic@gnu.org>
#
#    This library is free software; you can redistribute it and/or
#    modify it under the terms of the GNU Lesser General Public
#    License as published by the Free Software Foundation; either
#    version 2.1 of the License, or (at your option) any later version.
#
#    This library is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
#    Lesser General Public License for more details.
#
#    You should have received a copy of the GNU Lesser General Public
#    License along with this library; if not, write to the Free Software
#    Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
#
AC_PREREQ(2.59)
AC_INIT(osgAL,0.6.0)
AC_CONFIG_AUX_DIR(config)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR([osgal.pc.in])

AC_PROG_MAKE_SET
AC_GNU_SOURCE
AC_LANG(C++)
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PATH_CCACHE
AC_PROG_LIBTOOL

#
# G++ specific debug and optimization flags
#
AC_ARG_ENABLE(debug,
    [  --enable-debug          build in debug mode (the default is to build in optimized mode)],
    [enable_debug=yes])

if test "$GXX" = "yes" -a "$ac_test_CXXFLAGS" != set ; then
  if test "$enable_debug" = "yes" ; then
    CFLAGS="-pipe -g -Wall -W"
    CXXFLAGS="-pipe -g -Wall -Wpointer-arith"
  else
    CFLAGS="-pipe -O3 -Wall -W"
    CXXFLAGS="-pipe -O3 -Wall -Wpointer-arith"
  fi
fi

AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_INSTALL
AM_PROG_LIBTOOL

AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)

PKG_CHECK_MODULES(OPENSCENEGRAPH, openscenegraph >= 0.9.8)
PKG_CHECK_MODULES(OPENAL, openal >= 0.0.8)
PKG_CHECK_MODULES(FREEALUT, freealut >= 1.0)
PKG_CHECK_MODULES(VORBIS, vorbis >= 1.0)
PKG_CHECK_MODULES(VORBISFILE, vorbisfile >= 1.0)

#
# Was introduced sometime in 2005, does not show pre-2005
# #define ALC_STEREO_SOURCES                       0x1011
# There should really be a version number in the headers.
#
AC_COMPILE_IFELSE(
        [AC_LANG_PROGRAM([[#include <AL/alc.h>]],
                         [[int a = ALC_STEREO_SOURCES;]])],
        [OPENAL_VERSION=2005],
        [OPENAL_VERSION=2004])

  AC_TRY_COMPILE(
  [#include <AL/alut.h>],
  [alutLoadMemoryFromFile((const char*)0,(ALenum*)0,(ALsizei*)0,(ALfloat*)0);]
  , 
  [OPENAL_VERSION=2007])

if test $OPENAL_VERSION = 2005 ; then
  #
  # Was introduced sometime in 2006, does not show pre-2006
  # #define AL_VERSION_1_1
  #
  AC_TRY_COMPILE([#include <AL/al.h>], 
	       [AL_VERSION_1_1
               ],
               [OPENAL_VERSION=2005],
               [OPENAL_VERSION=2006])
fi

AC_DEFINE_UNQUOTED(OPENAL_VERSION, [$OPENAL_VERSION], [OpenAL CVS version (rough estimate)])

AC_CONFIG_FILES([
        Makefile 
	include/Makefile 
	include/osgAL/Makefile 
	include/openalpp/Makefile 
	src/Makefile 
	src/osgAL/Makefile 
	src/openalpp/Makefile 
	src/osgPlugin/Makefile 
	examples/Makefile 
	osgal.pc
	examples/openalpp/Makefile 
	examples/osgal/Makefile 
	examples/osgalocclude/Makefile 
	examples/osgalmultiple/Makefile 
	examples/osgalviewer/Makefile 
])
AC_OUTPUT
