#########################################
# Capture
SET(EXE_NAME example_oalpp_capture)

ADD_EXECUTABLE( ${EXE_NAME} capture.cpp )
add_definitions( -D_CONSOLE )

INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")


#########################################
# Moving
SET(EXE_NAME example_oalpp_moving)

ADD_EXECUTABLE( ${EXE_NAME} moving.cpp )
add_definitions( -D_CONSOLE )

INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")


#########################################
# Multiple
SET(EXE_NAME example_oalpp_multiple)

ADD_EXECUTABLE( ${EXE_NAME} multiple.cpp )
add_definitions( -D_CONSOLE )

INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")


#########################################
# multiple_oggstreams
SET(EXE_NAME example_oalpp_multiple_oggstreams)

ADD_EXECUTABLE( ${EXE_NAME} multiple_oggstreams.cpp )
add_definitions( -D_CONSOLE )

INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")


#########################################
# playOgg
SET(EXE_NAME example_oalpp_playOgg)

ADD_EXECUTABLE( ${EXE_NAME} playOgg.cpp )
add_definitions( -D_CONSOLE )

INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")


#########################################
# simple
SET(EXE_NAME example_oalpp_simple)

ADD_EXECUTABLE( ${EXE_NAME} simple.cpp )
add_definitions( -D_CONSOLE )

INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")


#########################################
# testfstream
SET(EXE_NAME example_oalpp_testfstream)

ADD_EXECUTABLE( ${EXE_NAME} testfstream.cpp )
add_definitions( -D_CONSOLE )

INCLUDE_WITH_VARIABLES( ${EXE_NAME} OPENAL ALUT )
LINK_WITH_VARIABLES( ${EXE_NAME} OSG )
TARGET_LINK_LIBRARIES( ${EXE_NAME} openalpp )
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
