
pkginclude_HEADERS = \
    AudioBase \
    AudioConvert \
    AudioEnvironment \
    DeviceUpdater \
    Error \
    GroupSource \
    InputDevice \
    Listener \
    PositionedObject \
    Sample \
    SoundData \
    Source \
    SourceBase \
    Stream \
    StreamUpdater \
    FileStream \
    FileStreamUpdater \
    Export \
    windowsstuff \
    config 

