SET(LIB_NAME osgdb_osgAL)
#SET(HEADER_PATH ${osgAL_SOURCE_DIR}/include/${LIB_NAME})
SET(OSGAL_USER_DEFINED_DYNAMIC_OR_STATIC MODULE)

#SET(LIB_PUBLIC_HEADERS ...)

ADD_LIBRARY(
	${LIB_NAME}
	${OSGAL_USER_DEFINED_DYNAMIC_OR_STATIC}
    #${LIB_PUBLIC_HEADERS}
	IO_OccludeCallback.cpp
	IO_SoundNode.cpp
	IO_SoundRoot.cpp
	IO_SoundState.cpp
)


add_definitions( 
  -DOSGPLUGINOSGAL_EXPORTS
  # -DWIN32
  # -D_DEBUG
  # -D_USRDLL
  # -D_WINDOWS
)

LINK_WITH_VARIABLES( ${LIB_NAME} OSGDB OSG OSGDB OPENTHREADS ALUT OPENAL VORBIS VORBISFILE OGG )
#OPENAL ALUT 
TARGET_LINK_LIBRARIES( ${LIB_NAME} openalpp osgAL )
#winmm

# Ugly workaround to remove the "/debug" or "/release" in each output
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "../")
SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES IMPORT_PREFIX "../")

INCLUDE(ModuleInstall OPTIONAL)
